# hashcheck

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: algorithm.rs  cli.rs  hasher.rs  main.rs  output.rs  verifier.rs
tests/: integration.rs
